--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,52 @@ input {
 }
 
 /*--------------book--------*/
+/*-------------contact page--------*/
+.contact .row{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap:1.5rem;
+}
+
+.contact .row .image{
+  flex:1 1 40rem;
+}
+
+.contact .row .image img{
+  width: 100%;
+}
+
+.contact .row form{
+  border:var(--border);
+  flex:1 1 40rem;
+  padding:2rem;
+  text-align: center;
+}
+
+.contact .row form h3{
+  font-size: 2.5rem;
+  color:var(--black);
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+}
+
+.contact .row form .box{
+  width: 100%;
+  border:var(--border);
+  padding:1.4rem;
+  font-size: 1.8rem;
+  color:var(--black);
+  margin:.5rem 0;
+}
+
+.contact .row form textarea{
+  height: 15rem;
+  resize: none;
+}
+
+
+/*-----------contact page---------*/
 /*--------------about--------*/
 .top {
   margin-top: 10%;
