--- a/css/style.css
+++ b/css/style.css
@@ -223,16 +223,20 @@ button {
   width: 100%;
   height: 20vh;
   color: white;
+  
 }
 
 .book .input {
   background: #242e5a;
   padding: 20px 20px 40px 20px;
+  border-radius: 30px;
+  
 }
 
 .book .search {
-  background: #3f9cc1;
+  background: #05a4e2;
   padding: 20px;
+  border-radius: 30px;
 }
 
 input {
@@ -258,7 +262,7 @@ input {
   border: none;
   font-weight: bold;
   font-size: 20px;
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 /*--------------book--------*/
@@ -714,4 +718,8 @@ footer li:hover {
 footer{
   color: white;
   background-color: black;
+}
+.bookingg{
+  color: rgb(255, 255, 255);
+  font-family: fantasy;
 }
