--- a/css/style.css
+++ b/css/style.css
@@ -403,10 +403,10 @@ http://www.freshdesignweb.com/drop-down-responsive-menu-with-css3-and-jquery.htm
 			color:#777;
 		}
 }
-nav{
+.nav1{
 	position: absolute;
-    top: 80px;
-    right: 50px;
+    top: 40px;
+    right: 60px;
 
 }
 
