--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ header ul li {
 header ul li a {
   font-size: 1.2rem;
   font-weight: 400;
-  color: white;
+  color:#fffefa; 
   transition: 0.5s;
 }
 
