--- a/css/style.css
+++ b/css/style.css
@@ -18,16 +18,61 @@ body {
   scroll-behavior: smooth;
 }
 
+.footer .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+  gap:1.5rem;
+  align-items: flex-start;
+}
+
+.footer .box-container .box{
+  text-align: center;
+  padding:2rem;
+  border:var(--border);
+}
+
+.footer .box-container .box img{
+  height: 10rem;
+  margin-bottom: 1rem;
+}
+
+.footer .box-container .box h3{
+  margin:1rem 0;
+  font-size: 2rem;
+  color:var(--black);
+}
+
+.footer .box-container .box a,
+.footer .box-container .box p{
+  line-height: 2;
+  font-size: 1.5rem;
+  color:var(--light-color);
+  display: block;
+}
+
+.footer .credit{
+  background-color: var(--black);
+  text-align: center;
+  padding:3rem 2rem;
+  font-size: 2rem;
+  color:var(--white);
+  /* padding-bottom: 10rem; */
+}
+
+.footer .credit span{
+  color:var(--yellow);
+}
 /*-------- headingroom part------*/
 .headingroom{
-  background-color:  #C1B086;
+  background-color:  rgb(14, 14, 92);
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1rem;;
   flex-flow: column;
-  min-height: 20rem;
+  min-height: 6rem;
+
 }
 
 .headingroom h3{
@@ -38,23 +83,23 @@ body {
 
 .headingroom p a{
   font-size: 2rem;
-  color: rgb(14, 14, 92) ;
+  color: #C1B086 ;
 }
 
 .headingroom p span{
   font-size: 2rem;
-  color:white;
+  color:#C1B086;
 }
 
 .headingroom p a:hover{
-  color:rgb(14, 14, 92);
+  color:#e5e911;
 }
 
 /*--------heading part-------*/
 
 
 .logo{
-  color: #fff;
+  color: #C1B086;
   font-size: 30px;
 }
 li {
@@ -101,7 +146,7 @@ header nav {
   height: 3px;
   margin: 5px auto;
   transition: all 0.3s ease-in-out;
-  background-color: #fff;
+  background-color: #C1B086;
 }
 
 header ul {
@@ -117,12 +162,12 @@ header ul li {
 header ul li a {
   font-size: 1.2rem;
   font-weight: 400;
-  color:#fffefa; 
+  color: #C1B086;
   transition: 0.5s;
 }
 
 header ul li a:hover {
-  color: #C1B086;
+  color: #e5e911;
 }
 
 @media only screen and (max-width: 768px) {
@@ -241,17 +286,132 @@ button {
 
 .home .box .text::after {
   position: absolute;
-  content: 'H';
-  font-size: 500px;
-  top: -120%;
+  content: 'BlueMoon';
+  font-size: 120px;
+  top:-20%;
+  left: -5%;
   font-weight: bold;
   opacity: 0.1;
 }
 
 /*--------------home--------*/
+/*-----------log in form------*/
+.form-container form{
+  max-width: 50rem;
+  margin:0 auto;
+  border:0.2rem solid #C1B086;
+  padding:2rem;
+  text-align: center;
+  
+}
+.form-container form h3{
+  margin-bottom: 1rem;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  color:#634908;
+}
+
+.form-container form .box{
+  margin:1rem 0;
+  padding:1.4rem;
+  color:#af8416;
+  border:0.1rem solid rgb(14, 14, 92);
+  font-size: 1.8rem;
+  width: 100%;
+  background-color: #fff;
+}
+
+.form-container form p{
+  margin-top: 1.5rem;
+  font-size: 2rem;
+  color:rgb(14, 14, 92);
+}
+
+.form-container form p a{
+  font-size: 2rem;
+  color:red;
+}
+
+.form-container form p a:hover{
+  color:black;
+}
+.pic{
+  background-image: url("../hero/banner1.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+ 
+}
+.pic1{
+  background-image: url("../image/banner3.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+ 
+}
+.pic2{
+  background-image: url("../image/dining-img2.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+ 
+}
+.blur{
+  background-color: #bbb4b49f;
+}
+.form-label{
+  color: #242e5a;
+  font-size: 20px;
+  
+}
+/*---------- log in form-------*/
+/*---------check form--------*/
+
+.form-container1 form{
+  max-width: 50rem;
+  margin:0 auto;
+  padding:2rem;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.568);
+  min-height: 20rem;
+  
+}
+.form-container1 form h3{
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  text-transform: uppercase;
+  color:#634908;
+}
+
+.form-container1 form .box{
+  margin:1rem 0;
+  padding:1.4rem;
+  color:#af8416;
+  border:0.2rem solid rgb(14, 14, 92);
+  font-size: 1.2rem;
+  width: 100%;
+  background-color: #fff;
+}
+
+.form-container1 form p{
+  margin-top: 1.5rem;
+  font-size: 1.3rem;
+  color:rgb(14, 14, 92);
+}
+
+.form-container1 form p a{
+  font-size: 2rem;
+  color:red;
+}
+
+.form-container1 form p a:hover{
+  color:black;
+}
+
+/*---------check forn-------*/
 
 /*-------------contact page--------*/
-.contact .row {
+.contact .row{
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -267,7 +427,7 @@ button {
 }
 
 .contact .row form{
-  border:2rem rgb(14, 14, 92);
+  border:0.2rem solid rgb(14, 14, 92);
   flex:1 1 40rem;
   padding:2rem;
   text-align: center;
@@ -275,17 +435,18 @@ button {
 
 .contact .row form h3{
   font-size: 2.5rem;
-  color:#263760;
+  color:#634908;
   text-transform: capitalize;
   margin-bottom: 1rem;
 }
 
 .contact .row form .box{
   width: 100%;
-  border:2rem rgb(14, 14, 92);
+  border:0.2rem solid rgb(14, 14, 92);
+  background-color: #fff;
   padding:1.4rem;
   font-size: 1.8rem;
-  color:#263760;
+  color:#85630e;
   margin:.5rem 0;
 }
 
@@ -299,7 +460,7 @@ button {
 /*---------- gallery page--------*/
 .reviews .slide{
   margin-bottom: 4rem;
-  border: 1.2rem solid rgb(14, 14, 92);
+  border: 0.2rem solid rgb(14, 14, 92);
   text-align: center;
   margin: 5rem;
 }
@@ -335,8 +496,7 @@ button {
 .button{
   display: flex;
 }
-/*-----------gallery page--------*/
-/*----------room page----------*/
+
 
 
 .products .box-container{
@@ -349,7 +509,7 @@ button {
 
 .products .box-container .box{
   position: relative;
-  border:var(--border);
+  border: 0.1rem solid rgb(14, 14, 92);
   padding:2rem;
   overflow: hidden;
 }
@@ -362,7 +522,7 @@ button {
   width: 4.5rem;
   line-height: 4.3rem;
   font-size: 2rem;
-  border:2rem rgb(14, 14, 92);
+  border:0.1rem solid rgb(14, 14, 92);
   background-color: rgb(14, 14, 92);
   cursor: pointer;
   color:#C1B086;
@@ -424,7 +584,7 @@ button {
   font-size: 30px;
   color: #3f9cc1;
 }
-/*---------room paage--------*/
+/*---------gallery page--------*/
 
 
 /*--------------about--------*/
